tests/NormalTests/paczka1/fuzzy1/91616180.err
Error in line 3: 0Dhz S41 56,62
Error in line 4: 4a5gj A259 -1,01
Error in line 5: 4a5gj A131 2,04
Error in line 12: dSrFb A245 -2,3
Error in line 2: 4a5gj A259 46,6
Error in line 7: tpKC S41 69,4
Error in line 11: dSrFb A245 56,1
Error in line 19: A131 A131 20,7
